SubBt/force-app/main/default/objects/Quote_Lineitem_Fields__c/fields/Col_Width__c.field-meta.xml
<CustomField>
    <fullName>Col_Width__c</fullName>
    <label>Column Width</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>