SubBt/force-app/main/default/objects/Quote_Lineitem_Fields__c/fields/DocTemplate_Page__c.field-meta.xml
<CustomField>
    <fullName>DocTemplate_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DocTemplate Page</label>
    <referenceTo>DocTemplate_Page__c</referenceTo>
    <relationshipLabel>Line Item Columns</relationshipLabel>
    <relationshipName>Line_Item_Columns</relationshipName>
    <type>Lookup</type>
</CustomField>