SubBt/force-app/main/default/objects/Quote_Lineitem_Fields__c/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <label>Field Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>