SubBt/force-app/main/default/objects/Quote_Lineitem_Fields__c/fields/Quote_Template__c.field-meta.xml
<CustomField>
    <fullName>Quote_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Template</label>
    <referenceTo>Quote_Template__c</referenceTo>
    <relationshipLabel>Line Item Columns</relationshipLabel>
    <relationshipName>Line_Item_Columns</relationshipName>
    <type>Lookup</type>
</CustomField>